# Bes

./: README.md  docker-compose.yml  pyproject.toml
backend/: dockerfile  pyproject.toml  settings.py  wsgi.py
backend/account/: models.py
backend/bes/account/: admin.py  models.py  serializers.py  urls.py  views.py
backend/bes/account/migrations/: 0002_alter_userprofile_avatar_alter_userprofile_user.py  0003_userprofile_is_active.py
backend/bes/bes/: asgi.py  settings.py  urls.py
backend/bes/housework/: models.py  serializers.py  urls.py  views.py
backend/bes/housework/migrations/: 0001_initial.py  0002_house_admin_user.py  0003_houseinvitation.py  0004_house_avatar.py  0005_rename_avatar_house_imagename.py  0006_rename_users_house_hearthusers.py  0007_houseworkmadetask_possible_task.py  0008_score.py  0009_rename_house_score_hearth_score_involvement_and_more.py
backend/housework/: urls.py
bes/: .gitignore  ionic.config.json
bes/backend/bes/: manage.py
bes/backend/bes/account/: models.py
bes/src/app/: app-routing.module.ts
frontend/: angular.json  capacitor.config.ts  dockerfile  ionic.config.json  package-lock.json  package.json  pyproject.toml
frontend/android/app/: build.gradle
frontend/scripts/: generate-icon-list-user.js  generate-image-list-hearth.js
frontend/src/: global.scss  main.ts
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  app.routes.ts  app.state.ts
frontend/src/assets/: hearth-images.json  icons.json
frontend/src/theme/: variables.scss
(+149 files in other folders)
